<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.skripsi.jalu.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_monitoring"
        android:name="com.skripsi.jalu.ui.monitoring.MonitoringFragment"
        android:label="Monitoring"
        tools:layout="@layout/fragment_monitoring">
        <action
            android:id="@+id/action_monitoringFragment_to_monitoringListFragment"
            app:destination="@id/navigation_monitoring_list" />
    </fragment>

    <fragment
        android:id="@+id/navigation_monitoring_list"
        android:name="com.skripsi.jalu.ui.monitoring.MonitoringListFragment"
        android:label="Monitoring List"
        tools:layout="@layout/fragment_monitoring_list" />

    <fragment
        android:id="@+id/navigation_laporan"
        android:name="com.skripsi.jalu.ui.laporan.LaporanFragment"
        android:label="@string/title_laporan"
        tools:layout="@layout/fragment_laporan">
        <action
            android:id="@+id/action_laporanFragment_to_laporanDetailFragment"
            app:destination="@id/navigation_laporan_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_laporan_detail"
        android:name="com.skripsi.jalu.ui.laporan.LaporanDetailFragment"
        android:label="@string/title_laporan_detail"
        tools:layout="@layout/fragment_detail_laporan">
        <argument
            android:name="laporanId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.skripsi.jalu.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_profileFragment_to_editProfileFragment"
            app:destination="@id/navigation_edit_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_edit_profile"
        android:name="com.skripsi.jalu.ui.profile.EditProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_edit_profile" >
        <action
            android:id="@+id/action_editProfileFragment_to_profileFragment"
            app:destination="@id/navigation_profile" />
    </fragment>

</navigation>
